apps/pingauthorize/base/pingauthorize-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingauthorize
  namespace: ping-gitops

spec:
  selector:
    app: pingauthorize

  ports:

  - name: https
    port: 1443
    targetPort: 1443

  - name: ldap
    port: 1389
    targetPort: 1389

  - name: ldaps
    port: 1636
    targetPort: 1636
